Fixed display issue on mobile History page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@
    background-color: #e8f5e9;
    background-size: 100% 100%;
    max-width: 100vw;
+   min-width: 100vw;
  }
 
  #banner h1 {
